spec/fixtures/layout/invalid/child-bad-syntax.erb
child line 1 - missing closing ] below
<% if ENV[TEST %>
child line 3
<% end %>
